@@ -20,7 +20,7 @@
 .Sh SYNOPSIS
 .Nm
 .Bk -words
-.Op Fl fh
+.Op Fl 6fh
 .Op Fl c Ar cert.pem
 .Op Fl d Ar docs
 .Op Fl k Ar key.pem
@@ -64,6 +64,8 @@ file inside that directory.
 .Pp
 The options are as follows:
 .Bl -tag -width 12m
+.It Fl 6
+Enable IPv6.
 .It Fl c Ar cert.pem
 The certificate to use, by default is
 .Pa cert.pem .
