@@ -1,3 +1,7 @@
+2021-01-11  Omar Polo  <op@omarpolo.com>
+
+	* gmid.c (main): ipv6 disabled by default and -6 flag to enable it
+
 2021-01-10  Omar Polo  <op@omarpolo.com>
 
 	* gmid.c (logs): log also the port of the client
